--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-native-vector-icons": "^6.6.0",
+    "uuidv4": "^6.0.2",
+    "react-native-elements": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
